k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flatbuddy-backend
  namespace: "2401066"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flatbuddy-backend
  template:
    metadata:
      labels:
        app: flatbuddy-backend
    spec:
      imagePullSecrets:
        - name: nexus-secret
      containers:
        - name: flatbuddy-backend
          image: 127.0.0.1:30085/vishwanath/flatbuddy-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flatbuddy-backend
  namespace: "2401066"
spec:
  selector:
    app: flatbuddy-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
